Update 20230707-README-itv-jvm.md